# EH-App

./: .devcontainer.json  .env.credentials.example  .env.dev  .env.development.patch  .env.example  .env.generated.example  .env.infrastructure  .env.prod  .env.third-party.example  .gitignore  AGENT.md  Glassmophic-Design-Rules.md  Phase1-Design-w-ddl.md  Phase1-Design.md  README-DEVPOD.md  README.md  devpod.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend-mock-data-structure.md  frontend-test-plan.md  package.json  rebuild-services.sh
.devcontainer/: .devcontainerignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  launch.json  post-start.sh  setup.sh  tasks.json
.kilocode/: mcp.json
backend/: CHAT_API_README.md  Dockerfile  database.py  main.py  models.py  pyproject.toml  test_chat_api.py  test_db.py
backend/api/: __init__.py  chat.py  goals.py  knowledge.py  projects.py  tasks.py
backend/scripts/: check-and-generate-mock-data.sh  generate_missing_mock_data.py  generate_mock_data.py
caddy/: Caddyfile  Caddyfile.dev  Caddyfile.prod
database/: .env.example  Dockerfile  docker-compose.yml  init-db.sh
dev_util_scripts/: rebuild-database.sh  rebuild-services.sh
discord-bot/: Dockerfile  example.env
docs/: Event Horizon Planner.json  Glassmophic-Design-Rules.md  Phase1-Design.md  Phase2-design.md  Phase2-implementation-summary.md  README.md  chat-interface-implementation-plan.md  dev-prod-environment-configuration-plan.md  environment-variables-management.md  frontend-component-structure.md  (+8 more)
n8n/: README.md  (+8 more)
(+113 files in other folders)
