[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "psycopg>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
    "python-multipart>=0.0.9",
    "httpx>=0.24.0",
    "redis>=5.0.0",
]
